// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.

syntax = "proto3";

package foundation.schema;

option go_package = "namespacelabs.dev/foundation/schema";

message GitHubAttachment {
    // The owner and repository name.
	string repository = 1;
    // The repository owner's name.
	string repository_owner = 2;
    // A unique number for each workflow run within a repository.
	string run_id = 3;
    // A unique number for each run of a particular workflow in a repository. 
	string run_attempt = 4;
    // The commit SHA that triggered the workflow.
	string sha = 5;
    // The fully-formed ref of the branch, tag or pull request that triggered the workflow run:
    // - refs/heads/<branch_name>
    // - refs/tags/<tag_name>
    // - refs/pull/<pr_number>/merge
    string ref = 6;
    // The name of the event that triggered the workflow.
    // - push
    // - pull_request
    // - release
    string event_name = 7;
    // The name of the person or app that initiated the workflow.
    string actor = 8;
    string desc  = 9;
    // The name of the workflow.
    string workflow = 10;
    // The job_id of the current job.
    string job = 11;
}
